--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <form onsubmit="getData(event)">
     <label>UserName : </label>
     <input type="text" id="userName" placeholder="Enter your name..." /><br>
-    <button type="submit" id="fetch" style="cursor: pointer;">Get Data</button>
+    <button type="submit" id="fetch" style="cursor: pointer;">Fetch Data</button>
   </form>
 
   <div id="data"></div>
